@@ -365,14 +365,22 @@ ft_viewer_kind(const char viewer[])
 		return VK_TEXTUAL;
 	}
 
+	/* Pass-through marker (for sixel graphics or something similar), %px and %py
+	 * could be needed here as well, so this check has higher priority. */
+	if(strstr(viewer, "%pd") != NULL)
+	{
+		return VK_PASS_THROUGH;
+	}
+
 	/* %pw and %ph can be useful for text output, but %px and %py are useful
 	 * for graphics only and basically must be used both at the same time. */
 	if(strstr(viewer, "%px") != NULL && strstr(viewer, "%py") != NULL)
 	{
 		return VK_GRAPHICAL;
 	}
-	/* Pass-through marker (for sixel graphics and something similar). */
-	return (strstr(viewer, "%pd") != NULL ? VK_PASS_THROUGH : VK_TEXTUAL);
+
+	/* Must be just text otherwise. */
+	return VK_TEXTUAL;
 }
 
 void
