@@ -92,6 +92,9 @@
 	vifminfo by default (add missing histories and tabs).  Thanks to Christoph
 	Schmidpeter.
 
+	Adjusted heuristic for determining previewer type to allow use of %px and
+	%py with %pd without any implications.  Thanks to iambumblehead.
+
 	Fixed line number column not including padding to the left of it.
 
 	Fixed local options not being loaded on Ctrl-W x.
